name:                trchart
version:             0.1.0.0
synopsis:            typeracer grapher
-- description:
homepage:            https://github.com/relrod/trchart
license:             BSD3
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >= 1.10

executable trchart
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       aeson,
                       base >= 4 && < 5,
                       Chart,
                       Chart-diagrams >= 1.3 && < 2,
                       lens,
                       lens-aeson,
                       scientific,
                       transformers,
                       wreq >= 0.3.0.0 && < 0.5
  -- hs-source-dirs:
  default-language:    Haskell2010
